@@ -2281,3 +2281,5 @@ rtrace output into separate files or streams.
 
 Improved getinfo so that it can also hop over resolution string with -c
 and header elide mode.
+
+Made pvalue -u option mean "uncompressed" with -r.
